--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{page.title}} - Kade Engine</title>
+    <title>{{page.title}} - Shit Engine</title>
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
@@ -41,11 +41,7 @@
           </ul>
         </p>
         <p>
-          <small>Binaries</small><br>
-          <a href="https://github.com/KadeDev/Kade-Engine/releases/latest">Download the <b>Latest release</b></a><br>
-          <a href="https://ci.appveyor.com/project/KadeDev/kade-engine-windows/build/artifacts">Download a <b>Windows</b> development build</a><br>
-          <a href="https://ci.appveyor.com/project/KadeDev/kade-engine-linux/build/artifacts">Download a <b>Linux</b> development build</a><br>
-          <a href="https://funkin.puyo.xyz/nightly/">Play in your <b>Web Browser</b></a>
+          <small>Binaries are not ready yet!</small><br>
         </p>
         {% endif %}
       </header>
