--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -41,7 +41,7 @@
           </ul>
         </p>
         <p>
-          <small>Binaries are not ready yet!</small><br>
+          <small>Binaries are not ready yet!</small>
         </p>
         {% endif %}
       </header>
